Fixed issue with modal hiding behind list

--- a/src/App.scss
+++ b/src/App.scss
@@ -375,6 +375,7 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1000;
   }
 
   &__content {
